[package]
name = "iris-web-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iris-web-core = { path = "../iris-web-core" }
iris-web-json = { path = "../iris-web-json" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = 3
lto = true
debug = false
debug-assertions = false
codegen-units = 1
panic = "abort"
overflow-checks = true